# CorroRate-ML

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-deeplearning.txt  requirements.txt
docs/: project-brief.md  reproducibility.md
scripts/: run_experiment.py
src/corrorate_ml/: __init__.py  experiment.py
