[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corrorate-ml"
version = "1.1.0"
description = "A reproducible materials informatics baseline for corrosion rate prediction."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "姚志扬" }
]
keywords = [
  "materials informatics",
  "corrosion",
  "machine learning",
  "feature selection",
  "model interpretability"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "scikit-learn>=1.2",
  "openpyxl>=3.0",
  "shap>=0.41"
]

[project.optional-dependencies]
notebook = [
  "jupyter",
  "notebook"
]
deep-learning = [
  "tensorflow>=2.10",
  "keras>=2.10"
]

[project.scripts]
corrorate-ml = "corrorate_ml.experiment:main"

[tool.setuptools.packages.find]
where = ["src"]
